--- a/font-end/www/package.json
+++ b/font-end/www/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "connect": "^3.7.0",
     "nodemon": "^1.19.1",
-    "serve-static": "^1.14.1"
+    "serve-static": "^1.14.1",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0"
   }
 }
